# vanguard

./: .dockerignore  .env.example  .gitignore  .two-sidecars.sh  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  NOTES-llmproxy.md  NOTES-nas.md  NOTES-obs.md  NOTES-pow.md  NOTES-pow2.md  NOTES-pow3.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: vanguard-task.md
.github/workflows/: ci.yml  release-please.yml  vanguard-doctor.yml  (+4 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: active.rs  appconfig.rs  docs.rs  drafts.rs  lib.rs  main.rs  projects.rs  remote.rs  runs.rs  sidecar.rs  spawn.rs  spec.rs  taskid.rs  tasks.rs  watch.rs
design/: brief.md
docker/: Dockerfile  build.sh  compose.yaml  runner.Dockerfile  sbom.sh
docs/: MERIDIAN-provider.md  MIGRATION-openrouter-provider.md  MIGRATION-provider-usage-quota.md  MIGRATION-zai-provider.md  PLAN-provider-usage-quota-final.md  deploy.md  onboarding-another-repo.md  onboarding-linear.md  vanguard-app-vision.md
examples/: from-github-issue.ts  from-gitlab-issue.ts  from-linear-issue.ts  from-linear-parent.ts  linear-run.ts  smoke.ts  validate-phase3.ts
scripts/: check-openrouter-pricing.ts  gen-desktop-wire.ts  gen-flow-b.ts
src/: github-labels.ts  gitlab-labels.ts  index.test.ts  index.ts  wire.test.ts  wire.ts
(+428 files in other folders)
